--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ body {
 }
 
 .footerclass {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Apple Chancery, cursive;
   color: green;
   font-size: 24px;
 }
