--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,15 @@ body {
   background-color: #011F3F;
 }
 
+#title {
+  font-family: Chalkduster, fantasy;
+  font-size: 90px;
+  color: red;
+}
+
 #level-title {
   font-family: 'Press Start 2P', cursive;
-  font-size: 3rem;
+  font-size: 31px;
   margin:  5%;
   color: #FEF2BF;
 }
@@ -51,10 +57,9 @@ body {
   box-shadow: 0 0 20px white;
   background-color: grey;
 }
-
 .footerclass {
   font-family: Apple Chancery, cursive;
-  color: green;
+  color: white;
   font-size: 24px;
 }
 
