Update Font Style

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
 }
 
 #title {
-  font-family: Chalkduster, fantasy;
+  font-family: 'Oswald', sans-serif;
   font-size: 90px;
   color: red;
 }
