--- a/styles.css
+++ b/styles.css
@@ -67,3 +67,9 @@ a {
   text-decoration: none;
   color: orange;
 }
+
+div {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10+ and Edge */
+  user-select: none; /* Standard syntax */
+}
