--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ a {
 }
 
 div {
-  -webkit-user-select: none; /* Safari */
-  -ms-user-select: none; /* IE 10+ and Edge */
-  user-select: none; /* Standard syntax */
+  -webkit-user-select: none; 
+  -ms-user-select: none; 
+  user-select: none;  
 }
